; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/apm/xgene/extr_xgene_enet_ring2.c_xgene_enet_set_ring_id.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/apm/xgene/extr_xgene_enet_ring2.c_xgene_enet_set_ring_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgene_enet_desc_ring = type { i32, i32 }

@RING_OWNER_CPU = common dso_local global i64 0, align 8
@OVERWRITE = common dso_local global i32 0, align 4
@PREFETCH_BUF_EN = common dso_local global i32 0, align 4
@IS_BUFFER_POOL = common dso_local global i32 0, align 4
@CSR_RING_ID = common dso_local global i32 0, align 4
@CSR_RING_ID_BUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xgene_enet_desc_ring*)* @xgene_enet_set_ring_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xgene_enet_set_ring_id(%struct.xgene_enet_desc_ring* %0) #0 {
  %2 = alloca %struct.xgene_enet_desc_ring*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.xgene_enet_desc_ring* %0, %struct.xgene_enet_desc_ring** %2, align 8
  %6 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %7 = getelementptr inbounds %struct.xgene_enet_desc_ring, %struct.xgene_enet_desc_ring* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @xgene_enet_ring_owner(i32 %8)
  %10 = load i64, i64* @RING_OWNER_CPU, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %50

13:                                               ; preds = %1
  %14 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %15 = getelementptr inbounds %struct.xgene_enet_desc_ring, %struct.xgene_enet_desc_ring* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @xgene_enet_is_bufpool(i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %19 = getelementptr inbounds %struct.xgene_enet_desc_ring, %struct.xgene_enet_desc_ring* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @GENMASK(i32 9, i32 0)
  %22 = and i32 %20, %21
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* @OVERWRITE, align 4
  %24 = load i32, i32* %3, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* %3, align 4
  %26 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %27 = getelementptr inbounds %struct.xgene_enet_desc_ring, %struct.xgene_enet_desc_ring* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = shl i32 %28, 9
  %30 = call i32 @GENMASK(i32 18, i32 9)
  %31 = and i32 %29, %30
  store i32 %31, i32* %4, align 4
  %32 = load i32, i32* @PREFETCH_BUF_EN, align 4
  %33 = load i32, i32* %4, align 4
  %34 = or i32 %33, %32
  store i32 %34, i32* %4, align 4
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %13
  %38 = load i32, i32* @IS_BUFFER_POOL, align 4
  %39 = load i32, i32* %4, align 4
  %40 = or i32 %39, %38
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %37, %13
  %42 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %43 = load i32, i32* @CSR_RING_ID, align 4
  %44 = load i32, i32* %3, align 4
  %45 = call i32 @xgene_enet_ring_wr32(%struct.xgene_enet_desc_ring* %42, i32 %43, i32 %44)
  %46 = load %struct.xgene_enet_desc_ring*, %struct.xgene_enet_desc_ring** %2, align 8
  %47 = load i32, i32* @CSR_RING_ID_BUF, align 4
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @xgene_enet_ring_wr32(%struct.xgene_enet_desc_ring* %46, i32 %47, i32 %48)
  br label %50

50:                                               ; preds = %41, %12
  ret void
}

declare dso_local i64 @xgene_enet_ring_owner(i32) #1

declare dso_local i32 @xgene_enet_is_bufpool(i32) #1

declare dso_local i32 @GENMASK(i32, i32) #1

declare dso_local i32 @xgene_enet_ring_wr32(%struct.xgene_enet_desc_ring*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
